<resources>
    <string name="app_name">Owner Property</string>
    <string name="login_your_account">Login your Account!</string>
    <string name="enter_email_here">Enter email here</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="home">Home</string>
    <string name="notification">Notification</string>
    <string name="profile">Profile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="good_morning">Good Morning</string>
    <string name="my_properties">My Properties</string>
    <string name="my_tenants">My Tenants</string>
    <string name="bills">Bills</string>
    <string name="maintenance_requests">Maintenance \nRequests</string>
    <string name="aed"><small>AED</small></string>
    <string name="total_balance">Total balance</string>
    <string name="available_balance">Available Balance</string>
    <string name="properties">Properties</string>
    <string name="rented">Rented</string>
    <string name="vacant">Vacant</string>
    <string name="for_sale">For Sale</string>
    <string name="notifications">Notifications</string>
    <string name="profile_info">Profile Info</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="phone_number">Phone Number</string>
    <string name="passport">Passport</string>
    <string name="change_password">Change Password</string>
    <string name="get_verification_code">Get Verification Code</string>
    <string name="enter_verification_code">Enter Verification Code</string>
    <string name="txt_continue">Continue</string>
    <string name="didn_t_receive_the_email">Didn\'t receive the email?</string>
    <string name="resend">Resend</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="add_new_password">Add New Password</string>
    <string name="reset_password">Reset Password</string>
    <string name="reset_successful">Reset Successful</string>
    <string name="go_to_login">Go to Login</string>
    <string name="property_details">Property Details</string>
    <string name="property_manager">Property Manager</string>
    <string name="call_now">Call Now</string>
    <string name="balance">Balance</string>
    <string name="rent_collected">Rent Collected</string>
    <string name="maintenance_expense">Maintenance Expense</string>
    <string name="upcoming_rental_payments">Upcoming Rental Payments</string>
    <string name="see_all">See all</string>
    <string name="rental_payment">Rental Payment</string>
    <string name="rental_history">Rental History</string>
    <string name="bank_transfer">Bank Transfer</string>
    <string name="property_id">Property ID</string>
    <string name="property_address">Property Address</string>
    <string name="area">Area</string>
    <string name="amenities">Amenities</string>
    <string name="furnishings">Furnishings</string>
    <string name="rent">Rent</string>
    <string name="total_rent">Total Rent</string>
    <string name="security_deposit">Security Deposit</string>
    <string name="rent_paid">Rent Received</string>
    <string name="duration">Duration</string>
    <string name="contract_team">Contract Team</string>
    <string name="payment_history">Payment History</string>
    <string name="all">All</string>
    <string name="documents">Documents</string>
    <string name="pages_in_doc">Pages in doc</string>
    <string name="payment_id">Payment ID</string>
    <string name="address">Address</string>
    <string name="rental_amount">Rental Amount</string>
    <string name="check_no">Cheque No</string>
    <string name="due_date">Due Date</string>
    <string name="owner">Owner</string>
    <string name="beneficiary">Beneficiary</string>
    <string name="payment_status">Payment Status</string>
    <string name="management_fee">Management Fee</string>
    <string name="company">Company</string>
    <string name="manager">Manager</string>
    <string name="contract_duration">Contract Duration</string>
    <string name="contract_term">Contract Term</string>
    <string name="amount">Amount</string>
    <string name="status">Status: </string>
    <string name="download">Download</string>
    <string name="select_property">Select Property</string>
    <string name="next_payment">Next Payment</string>
    <string name="payment_method">Payment Method</string>
    <string name="tenant_name">Tenant Name</string>
    <string name="property">Property</string>
    <string name="country">Country</string>
    <string name="bounce_date">Bounce Date</string>
    <string name="bank">Bank</string>
    <string name="payer">Payer</string>
    <string name="bounce_proof">Bounce Proof</string>
    <string name="invoice_id">Invoice ID</string>
    <string name="received">Received</string>
    <string name="remaining">Remaining</string>
    <string name="previous_payments">Previous Payments</string>
    <string name="receipt_no">Receipt No</string>
    <string name="method">Method</string>
    <string name="pay_now">Pay Now</string>
    <string name="pending_bills">Pending Bills</string>
    <string name="paid_bills">Paid Bills</string>
    <string name="paid_on">Paid on</string>
    <string name="payment_receipt">Payment Receipt</string>
    <string name="support">Support</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="about_us">About Us</string>
    <string name="drawer_open">Drawer Open</string>
    <string name="drawer_close">Drawer Close</string>
    <string name="remaining_rent">Remaining Rent</string>
    <string name="total_amount">Total Amount</string>
    <string name="amount_paid">Amount Paid</string>
    <string name="good_moring">Good Morning</string>
    <string name="good_noon">Good Noon</string>
    <string name="good_after_noon">Good Afternoon</string>
    <string name="good_night">Good Night</string>
    <string name="please_wait">Please Wait…</string>
    <string name="please_enter_your_email">Please enter your email</string>
    <string name="please_enter_your_password">Please enter your password</string>
    <string name="please_enter_your_phone_no">Please enter your phone number</string>
    <string name="please_enter_your_name">Please enter your name</string>
    <string name="enter_valid_email_address">Enter valid email address</string>
    <string name="password_must_be_at_least_six_characters">Password must be at least 8 characters</string>
    <string name="otp_exact_six_character">Please write all digit of otp</string>
    <string name="password_mismatched">Password and confirm password are mismatched!</string>
    <string name="new_password_mismatched">Old password and new password are mismatched!</string>
    <string name="whoops">Whoops!!</string>
    <string name="no_internet_connection_was_found_check_your_connection_or_try_again">No Internet connection was found. Check your connection or try again.</string>
    <string name="try_again">Try Again</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="logout">Logout</string>
    <string name="are_you_sure_you_want_to_logout">Are you sure you want to logout?</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="remaining_milli_second">Remaining Millis Second</string>
    <string name="registered_email_address">Please enter your registered email address and password below to continue.</string>
    <string name="to_receive_verification_code">Please enter your registered email address to receive the verification code.</string>
    <string name="six_digit_verification_code">Please enter the 6-digit verification code to continue.</string>
    <string name="make_sure_to_set_strong_password">Please enter a new password below. Make sure to set a strong password.</string>
    <string name="congratulation_password_changed">Congratulations! Your password has been changed successfully.</string>
    <string name="update_profile">Update Profile</string>
    <string name="id">ID</string>
    <string name="phone">Phone</string>
    <string name="permission_required">Permission Required</string>
    <string name="this_permission_is_required_to_run_this_application">This permission is required to run the application</string>
    <string name="ok">OK</string>
    <string name="core_fundamental">Core fundamental are based on these permissions</string>
    <string name="need_to_allow_necessary_permission">You need to allow necessary permissions in Settings manually</string>
    <string name="update_password">Update Password</string>
    <string name="new_password">New Password</string>
    <string name="old_password">Old Password</string>
    <string name="update_password_contain_at_least">Please enter below a new password. It must contain at least 8 characters.</string>
    <string name="no_record_found">No record found</string>
    <string name="pending">Pending</string>
    <string name="partial">Partial</string>
    <string name="overdue">Overdue</string>
    <string name="bounced">Bounced</string>
    <string name="deposit">Deposit</string>
    <string name="menu_received">Received</string>
    <string name="payment_date">Payment Date</string>
    <string name="bill_category">Bill Category</string>
    <string name="ref_cheque_no">Ref/Cheque No</string>
    <string name="please_enter_your_confirm_password">Please enter your confirm password</string>
    <string name="space_not_allowed">Space is not allowed in password</string>
    <string name="view_passport">View Passport</string>
    <string name="pdf_file">PDF File</string>
    <string name="upload_file">Upload file</string>
    <string name="select_file">Select a File to Upload</string>
    <string name="please_enter_valid_phone_no">Please enter valid phone number</string>
    <string name="receipt">Receipt</string>
    <string name="setPdfPass">PDF password</string>
    <string name="enterPassword">Enter Password</string>
    <string name="enter_password">Please Enter Password</string>
    <string name="incorrect_password">Incorrect Password</string>
    <string name="view">View</string>
</resources>