<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="@dimen/_150sdp"
        android:clipToPadding="false"
        android:gravity="center"
        android:paddingBottom="@dimen/_10sdp">

        <TextView
            android:id="@+id/txt_logout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/_10sdp"
            android:fontFamily="@font/manrope_bold"
            android:text="@string/logout"
            android:textAllCaps="false"
            android:textColor="@color/black_app"
            android:textSize="@dimen/_17sdp" />

        <TextView
            android:id="@+id/txt_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/txt_logout"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/_10sdp"
            android:fontFamily="@font/manrope_regular"
            android:gravity="center"
            android:text="@string/are_you_sure_you_want_to_logout"
            android:textAllCaps="false"
            android:textColor="@color/black_app"
            android:textSize="@dimen/_15sdp" />

        <LinearLayout
            android:id="@+id/confirm_password_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/txt_detail"
            android:layout_marginHorizontal="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:orientation="horizontal"
            android:weightSum="2">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/btn_cancel"
                android:layout_width="0dp"
                android:layout_height="@dimen/_50sdp"
                android:layout_marginEnd="@dimen/_5sdp"
                android:layout_weight="1"
                android:background="@drawable/cancel_round"
                android:fontFamily="@font/manrope_semibold"
                android:gravity="center"
                android:padding="@dimen/_10sdp"
                android:text="@string/cancel"
                android:textAllCaps="false"
                android:textColor="@color/black_app"
                android:textSize="@dimen/_14sdp" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/btn_confirm"
                android:layout_width="0dp"
                android:layout_height="@dimen/_50sdp"
                android:layout_marginStart="@dimen/_5sdp"
                android:layout_weight="1"
                android:background="@drawable/confirm_round"
                android:fontFamily="@font/manrope_semibold"
                android:gravity="center"
                android:padding="@dimen/_10sdp"
                android:text="@string/confirm"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="@dimen/_14sdp" />
        </LinearLayout>
    </RelativeLayout>
</layout>