<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="@dimen/_300sdp"
        android:clipToPadding="false"
        android:gravity="center"
        android:paddingBottom="@dimen/_10sdp">

        <ImageView
            android:id="@+id/off_internet"
            android:layout_width="@dimen/_140sdp"
            android:layout_height="@dimen/_80sdp"
            android:background="@drawable/internet_off_img"
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_centerHorizontal="true"
            />
        <TextView
            android:id="@+id/txt_logout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/off_internet"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/_10sdp"
            android:fontFamily="@font/manrope_bold"
            android:text="@string/whoops"
            android:textAllCaps="false"
            android:textColor="@color/black_app"
            android:textSize="@dimen/_17sdp" />

        <TextView
            android:id="@+id/txt_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/txt_logout"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/_10sdp"
            android:gravity="center"
            android:layout_marginHorizontal="@dimen/_20sdp"
            android:fontFamily="@font/manrope_regular"
            android:text="@string/no_internet_connection_was_found_check_your_connection_or_try_again"
            android:textAllCaps="false"
            android:textColor="@color/black_app"
            android:textSize="@dimen/_14sdp" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/btnTryAgain"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/txt_detail"
            android:layout_marginHorizontal="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:background="@drawable/update_button_pressed"
            android:fontFamily="@font/manrope_bold"
            android:gravity="center"
            android:padding="@dimen/_10sdp"
            android:text="@string/try_again"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/_14sdp" />
    </RelativeLayout>
</layout>