<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        tools:context=".activities.ResetSuccessActivity">

        <RelativeLayout
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_50sdp">

            <ImageView
                android:id="@+id/back"
                android:layout_width="@dimen/_20sdp"
                android:layout_height="@dimen/_20sdp"
                android:layout_centerVertical="true"
                android:layout_marginStart="@dimen/_10sdp"
                android:background="@drawable/action_ripple"
                android:contentDescription="@string/app_name"
                android:src="@drawable/back" />

            <ImageView
                android:layout_width="@dimen/_100sdp"
                android:layout_height="@dimen/_20sdp"
                android:layout_centerInParent="true"
                android:layout_centerHorizontal="true"
                android:background="@drawable/forgot_logo"
                android:contentDescription="@string/app_name" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true">

            <ImageView
                android:id="@+id/circle_lock"
                android:layout_width="@dimen/_60sdp"
                android:layout_height="@dimen/_60sdp"
                android:layout_centerHorizontal="true"
                android:background="@drawable/reset_success_icon"
                android:contentDescription="@string/app_name" />

            <TextView
                android:id="@+id/txt_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/circle_lock"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/_10sdp"
                android:fontFamily="@font/manrope_semibold"
                android:text="@string/reset_successful"
                android:textColor="@color/black_app"
                android:textSize="@dimen/_17sdp" />

            <TextView
                android:id="@+id/txt_login_details"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/txt_login"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginHorizontal="@dimen/_20sdp"
                android:fontFamily="@font/manrope_semibold"
                android:gravity="center"
                android:text="@string/congratulation_password_changed"
                android:textColor="@color/hint_text_color"
                android:textSize="@dimen/_12sdp" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/btn_go_to_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/txt_login_details"
                android:layout_marginHorizontal="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:background="@drawable/forgot_round"
                android:fontFamily="@font/manrope_semibold"
                android:gravity="center"
                android:padding="@dimen/_10sdp"
                android:text="@string/go_to_login"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="@dimen/_14sdp" />
        </RelativeLayout>


    </RelativeLayout>
</layout>